--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,17 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <link rel="stylesheet" href="assets/css/vendor/vendor.min.css" />
+  <link rel="stylesheet" href="assets/css/plugins/plugins.min.css" />
+  <link rel="stylesheet" href="assets/css/style.min.css">
 </head>
 <body>
   <app-root></app-root>
+  <script src="assets/js/vendor/vendor.min.js"></script>
+  <script src="assets/js/plugins/plugins.min.js"></script>
+
+  <!-- Main Js -->
+  <script src="assets/js/main.js"></script>
 </body>
 </html>
